all services dockerized with postgresql and redis. Command, Factory, Singleton and Observer design patterns used for tracking service. Event Driven structure created to be aware of couriers who enters a store. Entry logs will be written to a table named EntryLog. Redis used to avoid multiple entry logs for couriers who enter a store twice or more in a minute.

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 
     <modules>
         <module>store-service</module>
+        <module>tracking-service</module>
     </modules>
 
     <build>
@@ -49,6 +50,4 @@
             </plugin>
         </plugins>
     </build>
-
-
 </project>
