--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - "6379:6379"
 
   postgres:
-    image: postgis/postgis:15-3.3
+    image: postgres:15
     container_name: postgres
     environment:
       POSTGRES_DB: trackingdb
@@ -16,8 +16,6 @@ services:
       POSTGRES_PASSWORD: password
     ports:
       - "5433:5432"
-    volumes:
-      - ./init-postgis.sql:/docker-entrypoint-initdb.d/init-postgis.sql
 
   tracking-service:
     build:
