test update, docker update, api gateway implementation.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     container_name: redis
     ports:
       - "6379:6379"
+    networks:
+      - courier-net
 
   postgres:
     image: postgres:15
@@ -16,6 +18,22 @@ services:
       POSTGRES_PASSWORD: password
     ports:
       - "5433:5432"
+    networks:
+      - courier-net
+
+  api-gateway:
+    build:
+      context: ./api-gateway
+    container_name: api-gateway
+    ports:
+      - "8080:8080"
+    depends_on:
+      - tracking-service
+      - store-service
+    environment:
+      GATEWAY_TRACKING-SERVICE_URI: http://tracking-service:8081
+    networks:
+      - courier-net
 
   tracking-service:
     build:
@@ -33,6 +51,8 @@ services:
       SPRING_DATA_REDIS_HOST: redis
       SPRING_DATA_REDIS_PORT: 6379
       STORE_SERVICE_URL: http://store-service:8082
+    networks:
+      - courier-net
 
   store-service:
     build:
@@ -40,3 +60,9 @@ services:
     container_name: store-service
     ports:
       - "8082:8082"
+    networks:
+      - courier-net
+
+networks:
+  courier-net:
+    driver: bridge
